# udata-event-service

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
tests/: test_service.py
udata_event_service/: __init__.py  consumer.py  producer.py
