[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "udata_event_service"
authors = [{name = "Etalab", email = "info@data.gouv.fr"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "kafka-python==2.0.2"
]

[project.urls]
Home = "https://www.data.gouv.fr"
